// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NitrogenDioxide Reducer Tests State Changes should load city on success of loading 1`] = `
Object {
  "accuracy": 2,
  "dateTime": "2019-07-12",
  "error": undefined,
  "isLoading": false,
  "nitrogenDioxide": Object {},
}
`;

exports[`NitrogenDioxide Reducer Tests State Changes should set error on error of loading 1`] = `
Object {
  "accuracy": 2,
  "dateTime": "2019-07-12",
  "error": "Error",
  "isLoading": false,
  "nitrogenDioxide": undefined,
}
`;
